--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!doctype html>
+<!doctype html>
 <!-- See http://www.firepad.io/docs/ for detailed embedding docs. -->
 <html>
 
@@ -138,5 +138,14 @@
       return ref;
     }
   </script>
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.6.8/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.6.8/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 </body>
 </html>
