--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       //// Initialize Firebase.
       //// TODO: replace with your Firebase project configuration.
       var config = {
-        apiKey: "AIzaSyC5bX20tQPzJh3K2s87FzLZyBrhP7fDpPc",
+        apiKey: '<API_KEY>',
         authDomain: "tactileye.firebaseapp.com",
         databaseURL: "https://tactileye-default-rtdb.firebaseio.com/"
       };
