--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       //// TODO: replace with your Firebase project configuration.
       var config = {
         apiKey: '<API_KEY>',
-        authDomain: "tactileye.firebaseapp.com",
-        databaseURL: "https://tactileye-default-rtdb.firebaseio.com/"
+        authDomain: "firepad-gh-tests.firebaseapp.com",
+        databaseURL: "https://firepad-gh-tests.firebaseio.com"
       };
       firebase.initializeApp(config);
 
