--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       //// Initialize Firebase.
       //// TODO: replace with your Firebase project configuration.
       var config = {
-        apiKey: '<API_KEY>',
-        authDomain: "firepad-gh-tests.firebaseapp.com",
-        databaseURL: "https://firepad-gh-tests.firebaseio.com"
+        apiKey: "AIzaSyC5bX20tQPzJh3K2s87FzLZyBrhP7fDpPc",
+        authDomain: "tactileye.firebaseapp.com",
+        databaseURL: "https://tactileye-default-rtdb.firebaseio.com/"
       };
       firebase.initializeApp(config);
 
@@ -75,5 +75,7 @@
       return ref;
     }
   </script>
+	
+
 </body>
 </html>
