而且都可以互动哦！

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 '<li>Undo / redo</li>' +
                 '<li>Cursor / selection synchronization.</li>' +
                 '<li><checkbox></checkbox> It supports customized entities.</li>' +
-                '<li>And it\'s all fully collaborative!</li>' +
+                '<li>而且都可以互动哦！</li>' +
               '</ul>' +
               '</div>');
         }
