--- a/index.html
+++ b/index.html
@@ -54,33 +54,7 @@
       //// Initialize contents.
       firepad.on('ready', function() {
         if (firepad.isHistoryEmpty()) {
-          firepad.setHtml('<span style="font-size: 24px;">Rich-text editing with <span style="color: red">Firepad!</span></span><br/>\n' +
-              '<br/>' +
-              '<div style="font-size: 18px">' +
-              'Supports:<br/>' +
-              '<ul>' +
-                '<li>Different ' +
-                  '<span style="font-family: impact">fonts,</span>' +
-                  '<span style="font-size: 24px;"> sizes, </span>' +
-                  '<span style="color: blue">and colors.</span>' +
-                '</li>' +
-                '<li>' +
-                  '<b>Bold, </b>' +
-                  '<i>italic, </i>' +
-                  '<u>and underline.</u>' +
-                '</li>' +
-                '<li>Lists' +
-                  '<ol>' +
-                    '<li>One</li>' +
-                    '<li>Two</li>' +
-                  '</ol>' +
-                '</li>' +
-                '<li>Undo / redo</li>' +
-                '<li>Cursor / selection synchronization.</li>' +
-                '<li><checkbox></checkbox> It supports customized entities.</li>' +
-                '<li>而且都可以互动哦！</li>' +
-              '</ul>' +
-              '</div>');
+          firepad.setHtml('<span style="font-size: 24px;">这是属于 <span style="color: red">触目Tactileye</span></span><br/><br/>的在线文档！\n');
         }
       });
     }
