--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/5.5.4/firebase.js"></script>
-
-  <!-- CodeMirror -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css" />
-
-  <!-- Firepad -->
-  <link rel="stylesheet" href="https://firepad.io/releases/v1.5.9/firepad.css" />
-  <script src="https://firepad.io/releases/v1.5.9/firepad.min.js"></script>
+  
 
   <style>
     html { height: 100%; }
@@ -27,54 +19,10 @@
   </style>
 </head>
 
-<body onload="init()">
-  <div id="firepad-container" alt="打字框"></div>
+<body >
+  <script src="https://togetherjs.com/togetherjs-min.js"></script>
+	<button onclick="TogetherJS(this); return false;">Start TogetherJS</button>
 
-  <script>
-    function init() {
-      //// Initialize Firebase.
-      //// TODO: replace with your Firebase project configuration.
-      var config = {
-        apiKey: "AIzaSyC5bX20tQPzJh3K2s87FzLZyBrhP7fDpPc",
-        authDomain: "tactileye.firebaseapp.com",
-        databaseURL: "https://tactileye-default-rtdb.firebaseio.com/"
-      };
-      firebase.initializeApp(config);
-
-      //// Get Firebase Database reference.
-      var firepadRef = getExampleRef();
-
-      //// Create CodeMirror (with lineWrapping on).
-      var codeMirror = CodeMirror(document.getElementById('firepad-container'), { lineWrapping: true });
-
-      //// Create Firepad (with rich text toolbar and shortcuts enabled).
-      var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
-          { richTextToolbar: true, richTextShortcuts: true });
-
-      //// Initialize contents.
-      firepad.on('ready', function() {
-        if (firepad.isHistoryEmpty()) {
-          firepad.setHtml('<span style="font-size: 24px;">这是属于 <span style="color: red">触目Tactileye</span></span><br/><br/>的在线文档！\n');
-        }
-      });
-    }
-
-    // Helper to get hash from end of URL or generate a random one.
-    function getExampleRef() {
-      var ref = firebase.database().ref();
-      var hash = window.location.hash.replace(/#/g, '');
-      if (hash) {
-        ref = ref.child(hash);
-      } else {
-        ref = ref.push(); // generate unique location.
-        window.location = window.location + '#' + ref.key; // add it as a hash to the URL.
-      }
-      if (typeof console !== 'undefined') {
-        console.log('Firebase data: ', ref.toString());
-      }
-      return ref;
-    }
-  </script>
 	
 
 </body>
