--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body >
   <script src="https://togetherjs.com/togetherjs-min.js"></script>
-	<button onclick="TogetherJS(this); return false;">Start TogetherJS</button>
+	<button onclick="TogetherJS(this); return false;">Start TogetherJS Now</button>
 
 	
 
