调整手机尺寸

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="icon" href="http://www.leileixia.com/favicon.ico">
   </head>
   <body>
     <!-- Sidebar -->
@@ -102,6 +103,7 @@
 		  <div  class=" project-card video"id="Scar" href="#Scar-page" ><img style="height:110%" src="https://cdn.discordapp.com/attachments/1069662605985190002/1072317375560560741/IMG_5652.PNG" alt="Scar"></div>
 
 		  <div  class=" project-card video"id="The-Horse-Guessing-Game" href="#The-Horse-Guessing-Game-page" ><img style="height:110%" src="https://cdn.discordapp.com/attachments/1069662756028022864/1071491748100050944/Screen_Shot_2020-12-16_at_12.48.02_PM.png" alt="The Horse Guessing Game"></div>
+
 		  <div  class=" project-card video"id="Cat" href="#Cat-page" ><img style="height:110%" src="https://cdn.discordapp.com/attachments/1069661997119058090/1072334716948193310/Screenshot_2023-02-06_at_8.55.10_PM.png" alt="Cat"></div>
         
         
@@ -417,6 +419,26 @@
 		
 	</div></div>
   </div>
+
+<!--Knotty Magic Workshop-->
+<div id="knotty-magic-workshop-page" class="main">
+	<div style='display: flex; '>
+		<div style='flex: 0.4;'>
+			<b><i>Knotty Magic Workshop</i></b><br>
+			3 weeks online workshop collaborating with Ro Maiti and Icosa Magazine, ongoing now, 2023<br>
+			This is a 3 week's "LARP + Learn" workshop aiming at individuals who are looking to strengthen their self-learning skills and tap into the art of community learning. Participants join the workshop as part of the magical world wizards or witches, and help each other learn knot theory and create projects with it, which involves mathematics, art, philosophy, live-action roleplaying… In our Knotty Magic workshop, learning will be fun, communal, and self-driven. Everybody enter the space with something unique to teach and learn from each other. 
+			<img src="https://cdn.discordapp.com/attachments/1072335220365336576/1072361416180387921/image.png">
+			The first test workshop prototype outcome.
+			<img src="https://cdn.discordapp.com/attachments/1072335220365336576/1072361498120302612/image.png">
+			People "dressed up" in zoom to role-play the magician.
+		</div>
+		<div style='flex: 0.6;padding-left:20px'>
+			<img src="https://cdn.discordapp.com/attachments/1072335146931466280/1072335219803291739/Untitled_Artwork_4.jpg" alt="poster of the wokshop">
+		</div>
+	</div>
+</div>
+
+
 
     <!-- JavaScript to Control the Sidebar -->
     <script>
