--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" href="http://www.leileixia.com/favicon.ico">
+<link rel="icon"type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <!-- Sidebar -->
@@ -77,7 +77,7 @@
 		<!-- Images Section -->
       <div class="images" id="project-gallery home" alt="Image Display 图像陈列">
 		  
-		<div class="tall project-card"  id="Stapoleology" style="grid-column: span 1" alt="Stapoleology 订杆钉学">
+		<div class="tall project-card"  id="Stapoleology" href="#Stapoleology-page"style="grid-column: span 1" alt="Stapoleology 订杆钉学">
 			<img  style="height:100%; width:100%;" src="https://media.discordapp.net/attachments/1069655720204697660/1069655805059682384/Stapoleology.jpg?width=543&height=1032" alt="Stapoleology">
 		  </div>
 
@@ -438,6 +438,35 @@
 	</div>
 </div>
 
+<!--Stapoleology-->
+<div id="Stapoleology-page" class="main">
+	<div style='display: flex; '>
+		<div style='flex: 0.3;'>
+			<img src="https://media.discordapp.net/attachments/1072365682731257886/1072368975863873686/image.png?width=380&height=936">
+		</div>
+		<div style='flex: 0.4;padding-left:10px'>
+			<b><i>Stapoleology</i></b><br>
+			Leilei Xia, Single channel video and
+			Interactive map Installation, wooden
+			board covered pillar, and a city walk,
+			VCUarts Depillar Gallery, 2022
+			Amazed by the wild yet intricate
+			pattern on the utility poles in Richmond,
+			I created a fake research
+			term “Stapoleology”, meaning the
+			“research on staples on utility
+			poles”.<br>
+			The main part of the research is an
+			open-access map of the “masterpieces”
+			of utility poles in my neighborhood,
+			and a video essay where
+			I acted as an enthusiastic stapoleology
+			researcher explaining the philosophy
+			behind the staples on utility
+			poles.
+		</div>
+		<div style='flex: 0.3;'></div></div>
+</div>
 
 
     <!-- JavaScript to Control the Sidebar -->
