--- a/index.html
+++ b/index.html
@@ -440,11 +440,15 @@
 
 <!--Stapoleology-->
 <div id="Stapoleology-page" class="main">
-	<div style='display: flex; '>
+	<div style='display: flex;padding-bottom:0;' style="height:auto">
 		<div style='flex: 0.3;'>
-			<img src="https://media.discordapp.net/attachments/1072365682731257886/1072368975863873686/image.png?width=380&height=936">
+			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248743902883860/A5A0117.jpg">
+			I covered a pillar that was already in the gallery, and turn it into a pole. Visitors are welcomed to staple anything on the pole. 
+			an interactive map is installed on it, and audience can also see the video on the wall through the pole. <br><br>
+			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248745983266866/A5A0167.jpg">
+			<br><br><img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248743395381329/A5A0112.jpg" alt="display of TV"> display of TV
 		</div>
-		<div style='flex: 0.4;padding-left:10px'>
+		<div style='flex: 0.7;padding-left:30px'>
 			<b><i>Stapoleology</i></b><br>
 			Leilei Xia, Single channel video and
 			Interactive map Installation, wooden
@@ -463,9 +467,63 @@
 			I acted as an enthusiastic stapoleology
 			researcher explaining the philosophy
 			behind the staples on utility
-			poles.
+			poles.<br><br>
+			<div class="responsive-container"><iframe src="https://player.vimeo.com/video/779996213" width="1920" height="1080" frameborder="0" allow="fullscreen" allowfullscreen="" class=""></iframe></div><br><br>
+		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075251535044419584/WhatsApp_Image_2022-10-31_at_2.30.34_PM_1.jpeg" alt="People looking for stapoles"><br><br>
+		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075252931030421554/image.png" alt="Collage of stapoles">
+				image stills from the video.
 		</div>
-		<div style='flex: 0.3;'></div></div>
+	</div>
+
+	
+	<br><br>
+	<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248743672193034/A5A0115.jpg" alt="map installed on an ipad"><br><br>
+	<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248744389419028/A5A0123.jpg" alt="map navigate view"><br>
+	People are welcomed to navigate the map, or add their own favourite pole to the map. <br><br><br>
+	<div style='display: flex; '>
+		<div style='flex: 0.5;'>
+			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075254861928607774/image.png">
+			The current map, Link to the map is <a href="https://miro.com/app/board/uXjVPFKgj3I=/?share_link_id=267536299971" style="color:red;">HERE</a>
+		</div><div style='flex: 0.5; padding-left:20px;'>
+			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075256326566969404/Screenshot_2023-02-14_at_10.24.41_PM.png">
+			the original map
+
+		</div></div>
+	<br><br>
+	<div style='display: flex; '><div style='flex: 0.5;padding: right 10px;'>
+		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248745278611537/A5A0156.jpg">
+	</div><br>
+	<div style='flex: 0.5;padding-left:10px;'>
+		<img src="https://media.discordapp.net/attachments/1069655805353271406/1075248744754327552/A5A0126.jpg?width=1408&height=938">
+	</div></div>
+	All the papers are posted by visitors of the show.
+	<br><br>
+	<div style='display: flex; '><div style='flex: 0.5;padding: right 10px;'>
+		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248745043742800/A5A0128.jpg" alt="stapler in foler">
+	</div><div style='flex: 0.5;padding-left:10px;'>
+		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248744112607272/A5A0119.jpg"alt="people stapling paper on the pole">
+	</div></div><br><br>
+	I put a stapler on the pole to welcome people to staple on the pole. 
+	<div style='display: flex; '>
+		<div style='flex: 0.5;'>
+			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075261385233145896/99349B12-EF32-41F8-8C65-E27720E7781F_1_105_c.jpeg" alt="all view 1">
+		</div><div style='flex: 0.5;'>
+			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075261327280455720/B97810E0-40BD-4E96-B0C1-DB925868803B_1_105_c.jpeg" alt="all view 2">
+		</div></div><br><br>
+		<div style='display: flex; '>
+			<div style='flex: 0.8;'>
+				<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075262024830955540/Screenshot_2022-12-28_at_3.50.26_PM.png" alt="city walk">
+			</div><div style='flex: 0.2;padding-left:10px'>
+				A city walk tour to introduce people to the “masterpieces” around the street. 
+			</div></div><br><br>
+			<div style='display: flex; '>
+				<div style='flex: 0.3;'>
+					I also summerize the project and wrote an article that is published in "BIEDE", a sub-culture online media platform. It's in Chinese and you can read it <a href="https://mp.weixin.qq.com/s/9HFoJflskF5fvaAEzXG0Yg" style="color:red;">HERE</a>
+				</div><div style='flex: 0.7;padding-left:10px'>
+					<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075263023838662706/Screenshot_2023-02-14_at_10.51.16_PM.png">
+				</div></div>
+	
+		
 </div>
 
 
