Push Hands Animation Workshop

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248745983266866/A5A0167.jpg">
 			<br><br><img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248743395381329/A5A0112.jpg" alt="display of TV"> display of TV
 		</div>
-		<div style='flex: 0.7;padding-left:30px'>
+		<div style='flex: 0.7;padding-left:50px'>
 			<b><i>Stapoleology</i></b><br>
 			Leilei Xia, Single channel video and
 			Interactive map Installation, wooden
@@ -526,6 +526,49 @@
 		
 </div>
 
+<!--Push Hands Aniation Workshop-->
+<div id="Push-Hands-Animation-Workshop-page" class="main">
+	<div style='display: flex; '>
+		<div style='flex: 0.5;'>
+			<img src="https://cdn.discordapp.com/attachments/1069655720204697660/1075267304411103232/image.png" alt="push hands outside">
+			pushing hands outside.<br><br>
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267358723162192/image.png" alt="indoor animation and push hands"><br>After pushing hands outside, people come back indoor and do it again.
+			<br><br>
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267378302177393/image.png" alt="doing presentations in classroom">
+			<br><br>
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267443242582036/image.png" alt="presenting and talk about the work">
+			<br>We project our animation together, give advices to each other.<br><br>
+		</div>
+		<div style='flex: 0.5;padding-left:50px;'>
+			<b><i>Push Hands + Blender Animation Workshop</i></b>
+			1-month workshop, Guangzhou, 4/2022-5/2022<br><br>
+			In collaboration with Huangbian Station (Guangdong Times Museum),
+			I initiated a 3-week, 7-session workshop that combines 3D blender
+			animation and a traditional Chinese sport called “Push Hands”, similar to Taichi. Inspired by Jacques Ranciere's The Ignorant Schoolmaster, I wasnot focusing on teaching the 3D software techniques, but was trying to build a community that encourages self-learning, communication and sharing, and investigation of the mind-body connection. The process, instead of outcome, is highly emphasized in our practice. In the workshop, we do animation and push hands alternatively, and had a group sharing at the end of each session. Participants also collaborated on animation clips, as if pushing hands both in real life and in software.
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267426285006948/image.png" alt="tutorial">
+			Above is the tutorial I made for entry to blender.
+			We use Notion as our
+			online communication
+			platform. In the beginning,
+			I wrote a tutorial to
+			introduce the very basic
+			knowledge just enough to
+			make one grease pencil
+			animation clip, and the
+			rest of the advanced
+			techniques are all optional.
+			Later, we explore advanced techniques by
+			ourselves, and participants write their own
+			tutorials for each other. At the beginning of
+			each session, we also have a “demo cypher”
+			that allows participants to answer each
+			other’s questions.
+			<br><br>
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267978817450014/image.png" alt="The 3D scene we made for the animation">
+		</div>
+	</div>
+
+</div>
 
     <!-- JavaScript to Control the Sidebar -->
     <script>
