add to push hands animation workshop

--- a/index.html
+++ b/index.html
@@ -538,13 +538,26 @@
 			<br><br>
 			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267443242582036/image.png" alt="presenting and talk about the work">
 			<br>We project our animation together, give advices to each other.<br><br>
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267978817450014/image.png" alt="The 3D scene we made for the animation"> 
+			We also emphasized the dynamic process instead of a fixed outcome in making the short. We used the software interface as part of our visual element, to show the spirit of push hands--listening and following--is implemented not only between people but also between the animator and the software.<br><br>
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075268074523070504/image.png" alt="Pushing Hands in real life"><br><br>
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075268000741077052/image.png" alt="Work in Progress View">
+			When we are working together, we also do push hands just like in reality. 
+			
+			
 		</div>
 		<div style='flex: 0.5;padding-left:50px;'>
 			<b><i>Push Hands + Blender Animation Workshop</i></b>
-			1-month workshop, Guangzhou, 4/2022-5/2022<br><br>
+			1-month workshop, Guangzhou, 4/2022-5/2022, Animation Collaboration with: Haomin Peng; workshop participants: see the credits at the end of the film.<br><br>
+
 			In collaboration with Huangbian Station (Guangdong Times Museum),
 			I initiated a 3-week, 7-session workshop that combines 3D blender
-			animation and a traditional Chinese sport called “Push Hands”, similar to Taichi. Inspired by Jacques Ranciere's The Ignorant Schoolmaster, I wasnot focusing on teaching the 3D software techniques, but was trying to build a community that encourages self-learning, communication and sharing, and investigation of the mind-body connection. The process, instead of outcome, is highly emphasized in our practice. In the workshop, we do animation and push hands alternatively, and had a group sharing at the end of each session. Participants also collaborated on animation clips, as if pushing hands both in real life and in software.
+			animation and a traditional Chinese sport called “Push Hands”, similar to Taichi. Inspired by Jacques Ranciere's The Ignorant Schoolmaster, I wasnot focusing on teaching the 3D software techniques, but was trying to build a community that encourages self-learning, communication and sharing, and investigation of the mind-body connection. The process, instead of outcome, is highly emphasized in our practice. In the workshop, we do animation and push hands alternatively, and had a group sharing at the end of each session. Participants also collaborated on animation clips, as if pushing hands both in real life and in software.<br>
+			After the workshop, I collected participants’ animations and their audio responses to the workshop and collaborated with another animator to make a short about the workshop itself. The short is both an independent film, a summary of people’s works, a text for critical reflection, and guidance for other people to carry out a similar workshop.We rebuilt Xiaogang Park where people practice pushing hands, put the participants’ animation assets in the scene, and let them speak to their author about the experience in the workshop.
+			<br>
+			<iframe src="https://player.vimeo.com/video/722201211?h=b8cdcc1cf2" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+
 			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267426285006948/image.png" alt="tutorial">
 			Above is the tutorial I made for entry to blender.
 			We use Notion as our
@@ -563,8 +576,16 @@
 			each session, we also have a “demo cypher”
 			that allows participants to answer each
 			other’s questions.
+			
+			<br><br><br>
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075268024648618055/image.png" alt="Park">
+			The Real Park.
 			<br><br>
-			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075267978817450014/image.png" alt="The 3D scene we made for the animation">
+			<img src="https://cdn.discordapp.com/attachments/1075267305115766846/1075268043116130334/image.png" alt="Park in 3D">
+			The Park in 3D software.
+			<br><br>
+			
+			
 		</div>
 	</div>
 
