--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		<br><br>
 		<!---You will Shake Hands With Me--->
 		  <div class="responsive-container">
-		  <iframe src="https://youtu.be/x3F-myJYGsI" width="960" height="540" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="" ></iframe>
+		  <iframe src="https://youtu.be/x3F-myJYGsI" width="960" height="540" frameborder="0"  allowfullscreen="" ></iframe>
 		  </div>
 		 <br>
 		  <b><i>You Will Shake Hands With Me</i></b>
